@startuml class
class Customer {
  +customer_id: int
  +loyalty_card:str
  +name:str
  +phone_number:int
}
 
class Employee {
  +employee_id: int
  +availability:bool
  +name:str
  +phone_number:int
}
 
class ClothingItem {
  +barcode:int
  +clothingitem_id:int
  +description: str
  +brand: str
  +available_colours: str
  +price: float
} 

class FittingRoom {
  +fitting_room_id: int
  }

class CustomerHelpService{
  +customer_help_service_id:int
  +customer: Customer
  +employee: Employee
  +clothingitem: ClothingItem
  +fittingroom: FittingRoom
}
 
class NotificationMessage{
  +notification_message_id:int
  +sms:str
}

class CustomerSupportSystem {
  +customers
  +employees
  +fittingrooms
  +clothingitems
  +notificationmessages
  +customerhelpservices
  +sends_support_message()
  +available_employee()
  +help_succeed()
  +sends_clothing_information()
  +sends_request()
  +responds_to_request()
}
 
ClothingItem "1..*" -- "1" Customer
Employee "0..1" -- "1" Customer
@enduml